syntax = "proto3";

option java_package = "org.byovsiannikov.common.grpc";
option java_outer_classname = "BookingProto";

package booking;

// Сервис для управления бронюваннями
service BookingService {
  rpc BookTicket (BookRequest) returns (BookResponse);
  rpc CancelBooking (CancelRequest) returns (CancelResponse);
  rpc GetBooking (GetRequest) returns (GetResponse);
  rpc UpdateBooking (UpdateRequest) returns (UpdateResponse); // Новый метод
  rpc DeleteBooking (DeleteRequest) returns (DeleteResponse); // Новый метод
  rpc GetAllBookings (EmptyRequest) returns (GetAllResponse);
}

// Запрос на бронирование билета
message BookRequest {
  string user_id = 1;
  string movie_id = 2;
  int32 seat_number = 3;
}

// Ответ на бронирование билета
message BookResponse {
  bool success = 1;
  string booking_id = 2;
  string message = 3;
}

// Запрос на отмену бронирования
message CancelRequest {
  string booking_id = 1;
}

// Ответ на отмену бронирования
message CancelResponse {
  bool success = 1;
  string message = 2;
}

// Запрос на получение информации о бронировании
message GetRequest {
  string booking_id = 1;
}

// Ответ с информацией о бронировании
message GetResponse {
  string booking_id = 1;
  string user_id = 2;
  string movie_id = 3;
  int32 seat_number = 4;
  string status = 5;
}

// Запрос на обновление бронирования
message UpdateRequest {
  string booking_id = 1;
  int32 seat_number = 2;
}

// Ответ на обновление бронирования
message UpdateResponse {
  bool success = 1;
  string message = 2;
}

// Запрос на удаление бронирования
message DeleteRequest {
  string booking_id = 1;
}

// Ответ на удаление бронирования
message DeleteResponse {
  bool success = 1;
  string message = 2;
}

// Запрос на получение всех бронирований
message EmptyRequest {}

// Ответ со всеми бронированиями
message GetAllResponse {
  repeated GetResponse bookings = 1;
}
